--- a/About.Html
+++ b/About.Html
@@ -4,49 +4,171 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Capstone.CSS">
+    <link rel="stylesheet" href="style.Css">
 </head>
 <body>
     <div class="topnav">
-    <a  class="active" href="Capstone.HTML" >Home</a>
-    <a href="Gallery.Html">Gallery</a>
-    <a href="About.Html">About_us </a>
-    <a href="Contact Us .Html">Contact_us</a>
+    <a  class="active" href="Index.Html" >Home</a>
+    <a href="About.Html">About_us</a>
+    <a href="#Gallery">Gallery</a>
+    <a href="#Contact_us">Contact_us</a>
    </div> 
-  <H1>
-    About Us
-  </H1>
+    <p>
+        Hybrid animals are offspring resulting from the mating of two different species or genetically distinct populations, often combining traits from both parents.
+Definition and Formation
+A hybrid animal is produced when two different species, subspecies, or breeds interbreed, either in the wild or through human intervention. Hybrids can occur naturally, such as in overlapping habitats where related species meet, or artificially, through selective breeding in captivity. In most cases, the parent species are closely related genetically, which makes crossbreeding biologically possible. However, many hybrids are sterile and cannot reproduce due to differences in chromosome numbers between the parent species.
+Common Examples
+Liger: The offspring of a male lion and a female tiger, often exhibiting mixed physical traits like a lion-like body size with faint tiger stripes. Ligers are usually sterile.
+Tigon: The offspring of a male tiger and a female lion. Smaller than ligers and share characteristics from both parents.
+Mule: Produced from a male donkey and a female horse; mules are known for strength and endurance but are generally sterile due to differing chromosome numbers.
+Zeedonk / Zonkey: A cross between a zebra and a donkey, often featuring distinctive stripes on parts of its body.
+Wolf-dog hybrids: Result from mating a grey wolf and a domestic dog, combining physical and behavioral traits from both. While some may be fertile, hybrid behavior can be unpredictable.
+Characteristics
+Hybrids often exhibit traits from both parent species, which can include appearance, size, temperament, or adaptability. In some cases, hybrids show hybrid vigor, meaning improved strength, size, or other traits compared to parents. However, genetic incompatibilities can cause health problems, developmental issues, or sterility.
+Ecological and Ethical Considerations
+While natural hybrids can contribute to genetic diversity in ecosystems, human-created hybrids raise ethical and conservation concerns, including:
+Risks of affecting wild populations when hybrids escape into natural habitats.
+Animal welfare concerns due to health problems or unnatural breeding conditions.
+Hybridization potentially impacting conservation of endangered species by diluting pure gene lines.
+In conclusion, hybrid animals are fascinating examples of genetic mixing between species, demonstrating both the possibilities and limitations of cross-species reproduction. Whether occurring in nature or through human intervention, they offer unique insights into genetics, evolution, and species interaction.
+    </p> <br><br><br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/e9SBxmPBNCs?si=H8ax3HWYpS7DWMJs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <H1 style="text-align: center ; background-color: blue; border: 10px solid red;">Liger</H1>
+    <p>
+        The Liger is a hybrid. It is the offspring of a male Lion and a female Tiger. This means that the Liger has parents that are different species, but the same genus.
 
-  <p>Big cats" and "wild cats" both belong to the family Felidae, but scientists distinguish them based on their genetics and ability to roar. While there are roughly 40 species of wild cats, only a handful are considered "big." 
-Defining "Big Cats"
-Technically, the term refers to members of the genus Panthera. The most common definitions include: 
-The Roaring Cats: Only the Lion, Tiger, Leopard, and Jaguar can roar, thanks to a special ligament in their throats.
-The Genus Panthera: This often includes the Snow Leopard, which is genetically a big cat but cannot roar.
-Size-Based: In non-scientific contexts, large cats like the Cheetah and Cougar (Puma) are often grouped here, even though they belong to the "small cat" subfamily (Felinae) and can purr but not roar. 
-The World of Wild Cats
-Wild cats come in all sizes and live in diverse habitats, from deserts to snowy mountains. 
-Small Wild Cats: These make up about 80% of all wild cat species. Examples include the Bobcat, Lynx, Ocelot, Serval, and Caracal.
-Deadliest Small Cat: The Black-footed cat in Africa is the world's deadliest cat, with a 60% hunting success rate, despite its tiny size.
-Ancient Roots: All domestic cats descend from the African wildcat (Felis lybica), which was domesticated roughly 10,000 years ago. 
-For a closer look at the differences between domestic and wild cats, including their unique physical traits:
-Related video thumbnail
-00:18
-Understanding Big Cats: Domestic and Wild Comparisons
+Ligers only exist in captivity today, because the habitats of the parental species do not overlap out in the wild. They typically grow much larger than either parent species.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/kF5xGEe9QcA?si=83q9TVjKTCVGv_WE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-wildcatsanctuary
-TikTok • 6 Aug 2025
-Would you like to focus on a specific species, or are you interested in the conservation efforts currently protecting these animals?
-</p>
-<div class="footer">
-        <footer>
-          <p>
-               <i>
-                  Phone : +44 7919 095618
-                  Name : DJ
-               </i>
-          </p>
-        </footer>
-    </div>
+Another hybrid from the mating of the same animals – only reversed, a male Tiger and a female Lion – is known as the Tigon, and are often much smaller.
+
+Liger Facts
+
+Liger Facts Overview
+Habitat:	Do not occur naturally in the wild.
+Location:	Zoos & private ownership.
+Lifespan:	15 – 25 Years
+Size:	9.8 – 12 ft (3 to 3.6 m)
+Weight:	705 – 1,200 pounds (320 – 550 kg)
+Color:	Tawny, with feint tiger stripes.
+Diet:	Wild deer, boar
+Predators:	No natural predators, but potentially other big cats.
+Top Speed:	80 kph (50 mph)
+No. of Species:
+1
+Conservation Status:
+Not listed
+Ligers tend to be more like a lion, than a tiger.
+
+They are large, muscly and male ligers will have a mane, like a male lion, but often shorter than their father’s. They have dark tawny fur, with broad heads. They often have feint tiger stripes, inherited from their mother. Ligers are fond of swimming, just like Tigers (lions don’t like water), and are also quite sociable, just like lions.
+
+The Liger is not a new hybrid as they date back to the early 19th century in India. The name was coined to describe the creature in the 1930s. The Liger has appeared in art as far back as 1798 when a color plate depicted one, and in 1825 a Liger and its parents appeared in an engraving. A pair of Liger cubs born in 1837 were even put on display for King William IV and Queen Victoria who succeeded him.
+
+While thought to be extremely rare, historically lions and tigers may have interbred to produce ligers in the wild. The Asiatic lion once inhabited a much larger area of Asia, that may have meant it shared some territory with tigers. However, today, they are very much only cross bred in captivity, either accidentally or more often, purposefully as a rare attraction.
+
+Interesting Liger Facts
+1. The Liger is the largest known cat in the world.
+Male Ligers can reach a length of 10 to 12-feet which makes them slightly larger than even large male lions or tigers in length. They weigh considerably more than a Tiger or Lion. A non-obese male Liger named Hercules was recognized as being the largest living cat on Earth in 2013, when he weighed a total of 922 pounds. He measured 3.33 m (131 in) and stood at 1.25 m (49 in) at the shoulder. 1
+
+Liger Sitting
+
+2. It’s estimated that there are fewer than 100 Ligers in existence.
+The exact number is unknown, but this approximation is from Usman Masood who runs the website ligerzoos.com, and tracks reports of genuine ligers from around the world.
+
+The USA is thought to hold the largest number of ligers, around 30 are in private hands. This is followed by China with approx. 20. The photo below is a Liger in the Siberian Tiger Park, Harbin, China.
+
+A Liger in the Siberian Tiger Park, Harbin, China. 
+
+South Korea, Germany, Russia and South Africa each have a few Ligers in captivity.
+
+3. Ligers often suffer from obesity because they don’t get enough exercise in their small habitats and cages.
+This makes them even larger. A Liger named Nook living in the Valley of the Kings animal sanctuary in Wisconsin weighed over 1,200-pounds (before dying in 2007).
+
+4. Ligers can experience gigantism while dwarfism is known to occur in Tigons.
+Animals species have a natural hormone that stops them from over growing in one of their parents. A slight mutation can stop them having it. But in the case of a liger, it’s the female lion which carries the hormone to stop growth. So a male lion genes combined with a female tiger results in a much larger cat in the form of a liger.
+
+5. The Liger is not alone as being a large cat hybrid.
+There are other big cat hybrids that can measure up close to the size of the Liger. The Litigon, which happens to be a rare hybrid from a male Lion and female Tigon, can grow to just about the same size as the Liger. One such example was a male Litagon named Cubanacan who weighed a total of 800-pounds. He lived in the Alipore Zoo in India.
+
+6. Ligers appear to have a growth spurt early in the lives.
+Hormonal issues probably contribute to this. The Liger grows fast when very young and then slows down as it approaches their adult size. By the time they reach six years of age, all the growing has taken place. The female Liger is also large in size growing up to 700-pounds and a length of 10-feet.
+
+Korean Liger
+
+7. Ligers have relatively long lives.
+A female Liger named Shasta born in 1948 at the Hogle Zoo in Salt Lake City, Utah lived to the age of 24. Hobbs, a male Liger lived to just about 15 years. He was in the Sierra Safari Zoo in Reno, Nevada and succumbed to liver failure.
+
+8. Hybrid big cats are known to be fertile.
+There is a great deal of documentation on this subject. In fact, the fertility of big cat females includes many different hybrids. There is actually a rule that describes it: in hybrid animals, where their sex is determined by sex chromosomes, if one sex is absent, rare or happens to be sterile, the animal will be born heterogametric – the sex that had two different sex chromosomes. It is called Haldane’s Rule. There are other hybrids in the animal kingdom that are actually sterile.
+
+9. Ligers are fast. They have been clocked running up to 50mph.
+The size of the liger does not inhibit their running speed, they are as fast as a Lion and generally considered by experts as faster. If you were being chased by one, the weight of the animal hitting you would knock the wind out of you, or render you unconscious.
+
+10. The Liger shares more traits with a lion, than a tiger.
+As a Liger is the hybrid offspring of a Lion and a Tiger, it carries many different traits from both parents. However, the Liger has far more traits from the Lion parent than it does from the Tiger parent.
+
+Liger
+
+Or at least that is the findings of several researchers who have observed Ligers both in the wild and in captivity. Naturally, they live longer in captivity than in the wild.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/vybfyhYK-m0?si=Ut2bOeXL8z36ILjy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+11. A Ligers roar sounds like a lion.
+As the Liger is essentially a cross between a Tiger and a Lion, the Liger roar sounds a lot like the roar of a Lion. However, there are circumstances when the Liger roar will sound more like the roar of a Tiger as well.
+
+12. The majority of Ligers born until recent decades, were actually the result of accidents.
+That is to say, the breeding was not intentional. However, more recently they have been bred purposefully in captivity as a unique attraction.
+
+Chinese Liger
+
+13. Lions and tigers don’t overlap in the wild today, except in one location – India’s Gir Forest.
+Until now, no ligers have been found there. Typically they don’t cross the species line, and are not interested in each other. It’s been argued that crossbreeding will only occur in unique circumstances, such as when stuck in captivity and there are no other mates available of the same species.
+
+14. Ligers having poor immune systems is a myth.
+While it’s often argued that one of the problems of being a hybrid is that the immunity system gets compromised, actually Ligers appear to have hybrid vigor. This means quite the opposite, they are often fit, healthy, bigger and stronger. However, while Ligers haven’t been studied at great length, there are arguments that they have a greater chance of genetic issues and other defects. 2
+
+15. The tiger mother requires help at birth.
+As the Liger is considered one of the biggest cats on the planet, the Tiger mother usually requires a C-section in order to properly deliver the Liger cub as it will be larger than a normal Tiger cub.
+
+16. Ligers were popularised in the 2004 cult classic movie, Napoleon Dynamite.
+The liger was ‘pretty much’ the favourite animal of the socially awkward Napoleon.
+
+
+
+He’d spend time doodling them, and other fantasy creatures.
+
+17.  Crossbreeding of Ligers is often considered as unethical.
+Conservation scientist Luke Dollar argues that any crossbreeding between big cat species is unethical and is the result of greed or irresponsible breeding.
+
+“I can think of no legit excuse for a liger or tigon to exist. If we want to recognize and honor big cats as they naturally occur in the wild, why would we possibly experiment in these completely unnatural and not biologically founded practices?”
+
+Accredited zoos frown on crossbreeding big cats and often Ligers can be found in private hands and outside main zoos. 3
+
+18. The Association of Zoos and Aquariums (AZA), the accrediting body for zoos in North America, does not approve of Ligers.
+Steve Feldman a spokesperson from the AZA says Zoos should instead focus on wildlife-conservation programs. 4
+
+Liger Fact-File Summary
+Scientific Classification
+Kingdom:	Animalia
+Phylum:	Chordata
+Class:	Mammalia
+Order:	Carnivora
+Suborder:	Feliformia
+Family:	Felidae
+Subfamily:	Pantherinae
+Genus:
+Panthera
+Genus:
+P. Leo × P. Tigris
+Related ‘Big Cat’ Facts
+Cheetah	Cougar
+Jaguar	Leopard
+Liger	Lion
+Snow Leopard	Tiger
+Fact Sources & References
+“Largest Living Cat”, via Guiness Book of Records.
+“Cat Experts: Ligers and Other Designer Hybrids Pointless and Unethical”, via National Geographic.
+“Cat Experts: Ligers and Other Designer Hybrids Pointless and Unethical”, via National Geographic.
+“”Liliger” Born in Russia No Boon for Big Cats”, via National Geographic.
+    </p>
 </body>
 </html>
